# robomania

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  bot.py  dice_grammar.peg  mongo.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.py
.github/workflows/: build-package.yaml.wip  build.yaml  deploy.yaml  tests.yaml
cogs/: announcements.py  tester.py  utils.py
locale/: pl.json
src/robomania/: __main__.py  bot.py  config.py  locale.py
src/robomania/cogs/: announcements.py  info.py  picrew.py  planner.py  poll.py  roles.py  tester.py  utils.py
src/robomania/cogs/dice/: __init__.py  dice.py  grammar.py  mods.py  roll_result.py
src/robomania/locale/: en_GB.json  en_US.json  pl.json
src/robomania/models/: __init__.py  facebook_post.py  model.py  picrew_model.py
src/robomania/types/: announcement_post.py  facebook_post.py  image.py  message.py  model.py  picrew_model.py  post.py
src/robomania/utils/: __init__.py  assets.py  constants.py  exceptions.py  healthcheck.py  pipe.py  post_downloader.py  types.py
tests/: conftest.py  test_announcements.py  test_facebook_post.py  test_image.py  test_picrew_model.py  test_post.py  test_post_downloader.py  test_utils.py
tests/test_cogs/test_dice/: conftest.py  test_dice.py  test_mods.py  test_roll_result.py
