[project]
name = "Robomania"
version = "0.3.1"
description = "Bot for use on Domeq Krk discord server"
requires-python = ">=3.10"

[tool.poetry]
name = "Robomania"
version = "0.3.1"
description = "Bot for discord server"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
facebook-scraper = "^0.2.59"
disnake = "^2.5.2"
aiohttp = "^3.8.1"
motor = {extras = ["srv"], version = "^3.0.0"}
Pillow = "^9.2.0"
pytesseract = "^0.3.10"
python-dotenv = "^0.21.0"
click = "^8.1.3"
typing-extensions = "^4.3.0"
attrs = "^22.1.0"
validators = "^0.20.0"
pytz = "^2022.2.1"
pydantic = "^1.10.2"
Arpeggio = "^2.0.0"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
types-pytz = "^2022.2.1.0"
hypothesis = "^6.56.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
mongomock-motor = "^0.0.12"
Faker = "^14.2.0"
pytest-asyncio = "^0.19.0"
pytest-httpserver = "^1.0.5"
pytest-mock = "^3.8.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "strict"
addopts = "--cov=src/robomania --cov-report html --cov-report xml:cov.xml"

[tool.mypy]
python_version = "3.10"
show_error_codes = true
ignore_missing_imports = true
plugins = [
    "disnake.ext.mypy_plugin",
    "pydantic.mypy",
    "numpy.typing.mypy_plugin"
]

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.coverage.run]
source = ["src/robomania"]
omit = ["src/robomania/cogs/tester.py", "src/robomania/cogs/planner.py"]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
    "pragma: no cover",
    "@click",
    "if Config.debug:",
    "raise NotImplementedError"
]
